// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic function 1`] = `
{
  "resource": {
    "google_cloudfunctions_function": {
      "Function_DefaultFunction_81B206D7": {
        "available_memory_mb": 1024,
        "description": "This function was created by Wing",
        "entry_point": "handler",
        "environment_variables": {},
        "name": "function-c852aba6",
        "project": "my-project",
        "region": "us-central1",
        "runtime": "nodejs20",
        "service_account_email": "\${google_service_account.Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375.email}",
        "source_archive_bucket": "\${google_storage_bucket.Function_FunctionBucket_CD7D2793.name}",
        "source_archive_object": "\${google_storage_bucket_object.Function_FunctionObjectBucket_A7CD2097.name}",
        "timeout": 120,
        "trigger_http": true,
      },
    },
    "google_project_iam_custom_role": {
      "Function_CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5_22DA7C69": {
        "permissions": [
          "cloudfunctions.functions.get",
        ],
        "role_id": "cloudfunctions.customc852aba6d7cbe50c86bbedd1463b05db52425574b5",
        "title": "Custom Role for Cloud Function c852aba6d7cbe50c86bbedd1463b05db52425574b5",
      },
    },
    "google_project_iam_member": {
      "Function_ProjectIamMember_F891F2CD": {
        "member": "serviceAccount:\${google_service_account.Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375.email}",
        "project": "my-project",
        "role": "projects/my-project/roles/\${google_project_iam_custom_role.Function_CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5_22DA7C69.role_id}",
      },
    },
    "google_project_service": {
      "Function_FunctionBucket_IamServiceAccountCredentialsApi_EC496DEC": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_service_account": {
      "Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375": {
        "account_id": "function-c852aba6",
        "display_name": "Custom Service Account for Cloud Function c852aba6d7cbe50c86bbedd1463b05db52425574b5",
      },
    },
    "google_storage_bucket": {
      "Function_FunctionBucket_CD7D2793": {
        "depends_on": [
          "google_project_service.Function_FunctionBucket_IamServiceAccountCredentialsApi_EC496DEC",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "functionbucket-\${random_id.Function_FunctionBucket_Id_216676D0.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
    },
    "google_storage_bucket_object": {
      "Function_FunctionObjectBucket_A7CD2097": {
        "bucket": "\${google_storage_bucket.Function_FunctionBucket_CD7D2793.name}",
        "name": "objects",
        "source": "<source>",
      },
    },
    "random_id": {
      "Function_FunctionBucket_Id_216676D0": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`basic function 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5",
                    "path": "root/Default/Function/CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5",
                  },
                  "DefaultFunction": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "DefaultFunction",
                    "path": "root/Default/Function/DefaultFunction",
                  },
                  "FunctionBucket": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/Function/FunctionBucket/Default",
                      },
                      "IamServiceAccountCredentialsApi": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamServiceAccountCredentialsApi",
                        "path": "root/Default/Function/FunctionBucket/IamServiceAccountCredentialsApi",
                      },
                      "Id": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Id",
                        "path": "root/Default/Function/FunctionBucket/Id",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/Function/FunctionBucket",
                  },
                  "FunctionObjectBucket": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "FunctionObjectBucket",
                    "path": "root/Default/Function/FunctionObjectBucket",
                  },
                  "ProjectIamMember": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "ProjectIamMember",
                    "path": "root/Default/Function/ProjectIamMember",
                  },
                  "ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5",
                    "path": "root/Default/Function/ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with environment variables 1`] = `
{
  "resource": {
    "google_cloudfunctions_function": {
      "Function_DefaultFunction_81B206D7": {
        "available_memory_mb": 1024,
        "description": "This function was created by Wing",
        "entry_point": "handler",
        "environment_variables": {
          "BOOM": "BAM",
          "FOO": "BAR",
        },
        "name": "function-c852aba6",
        "project": "my-project",
        "region": "us-central1",
        "runtime": "nodejs20",
        "service_account_email": "\${google_service_account.Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375.email}",
        "source_archive_bucket": "\${google_storage_bucket.Function_FunctionBucket_CD7D2793.name}",
        "source_archive_object": "\${google_storage_bucket_object.Function_FunctionObjectBucket_A7CD2097.name}",
        "timeout": 120,
        "trigger_http": true,
      },
    },
    "google_project_iam_custom_role": {
      "Function_CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5_22DA7C69": {
        "permissions": [
          "cloudfunctions.functions.get",
        ],
        "role_id": "cloudfunctions.customc852aba6d7cbe50c86bbedd1463b05db52425574b5",
        "title": "Custom Role for Cloud Function c852aba6d7cbe50c86bbedd1463b05db52425574b5",
      },
    },
    "google_project_iam_member": {
      "Function_ProjectIamMember_F891F2CD": {
        "member": "serviceAccount:\${google_service_account.Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375.email}",
        "project": "my-project",
        "role": "projects/my-project/roles/\${google_project_iam_custom_role.Function_CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5_22DA7C69.role_id}",
      },
    },
    "google_project_service": {
      "Function_FunctionBucket_IamServiceAccountCredentialsApi_EC496DEC": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_service_account": {
      "Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375": {
        "account_id": "function-c852aba6",
        "display_name": "Custom Service Account for Cloud Function c852aba6d7cbe50c86bbedd1463b05db52425574b5",
      },
    },
    "google_storage_bucket": {
      "Function_FunctionBucket_CD7D2793": {
        "depends_on": [
          "google_project_service.Function_FunctionBucket_IamServiceAccountCredentialsApi_EC496DEC",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "functionbucket-\${random_id.Function_FunctionBucket_Id_216676D0.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
    },
    "google_storage_bucket_object": {
      "Function_FunctionObjectBucket_A7CD2097": {
        "bucket": "\${google_storage_bucket.Function_FunctionBucket_CD7D2793.name}",
        "name": "objects",
        "source": "<source>",
      },
    },
    "random_id": {
      "Function_FunctionBucket_Id_216676D0": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`basic function with environment variables 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5",
                    "path": "root/Default/Function/CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5",
                  },
                  "DefaultFunction": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "DefaultFunction",
                    "path": "root/Default/Function/DefaultFunction",
                  },
                  "FunctionBucket": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/Function/FunctionBucket/Default",
                      },
                      "IamServiceAccountCredentialsApi": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamServiceAccountCredentialsApi",
                        "path": "root/Default/Function/FunctionBucket/IamServiceAccountCredentialsApi",
                      },
                      "Id": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Id",
                        "path": "root/Default/Function/FunctionBucket/Id",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/Function/FunctionBucket",
                  },
                  "FunctionObjectBucket": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "FunctionObjectBucket",
                    "path": "root/Default/Function/FunctionObjectBucket",
                  },
                  "ProjectIamMember": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "ProjectIamMember",
                    "path": "root/Default/Function/ProjectIamMember",
                  },
                  "ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5",
                    "path": "root/Default/Function/ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with memory beyond the allowed range 1`] = `"Memory must be between 128 and 8192 MB for GCP Cloud Functions"`;

exports[`basic function with memory size specified 1`] = `
{
  "resource": {
    "google_cloudfunctions_function": {
      "Function_DefaultFunction_81B206D7": {
        "available_memory_mb": 256,
        "description": "This function was created by Wing",
        "entry_point": "handler",
        "environment_variables": {},
        "name": "function-c852aba6",
        "project": "my-project",
        "region": "us-central1",
        "runtime": "nodejs20",
        "service_account_email": "\${google_service_account.Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375.email}",
        "source_archive_bucket": "\${google_storage_bucket.Function_FunctionBucket_CD7D2793.name}",
        "source_archive_object": "\${google_storage_bucket_object.Function_FunctionObjectBucket_A7CD2097.name}",
        "timeout": 120,
        "trigger_http": true,
      },
    },
    "google_project_iam_custom_role": {
      "Function_CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5_22DA7C69": {
        "permissions": [
          "cloudfunctions.functions.get",
        ],
        "role_id": "cloudfunctions.customc852aba6d7cbe50c86bbedd1463b05db52425574b5",
        "title": "Custom Role for Cloud Function c852aba6d7cbe50c86bbedd1463b05db52425574b5",
      },
    },
    "google_project_iam_member": {
      "Function_ProjectIamMember_F891F2CD": {
        "member": "serviceAccount:\${google_service_account.Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375.email}",
        "project": "my-project",
        "role": "projects/my-project/roles/\${google_project_iam_custom_role.Function_CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5_22DA7C69.role_id}",
      },
    },
    "google_project_service": {
      "Function_FunctionBucket_IamServiceAccountCredentialsApi_EC496DEC": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_service_account": {
      "Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375": {
        "account_id": "function-c852aba6",
        "display_name": "Custom Service Account for Cloud Function c852aba6d7cbe50c86bbedd1463b05db52425574b5",
      },
    },
    "google_storage_bucket": {
      "Function_FunctionBucket_CD7D2793": {
        "depends_on": [
          "google_project_service.Function_FunctionBucket_IamServiceAccountCredentialsApi_EC496DEC",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "functionbucket-\${random_id.Function_FunctionBucket_Id_216676D0.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
    },
    "google_storage_bucket_object": {
      "Function_FunctionObjectBucket_A7CD2097": {
        "bucket": "\${google_storage_bucket.Function_FunctionBucket_CD7D2793.name}",
        "name": "objects",
        "source": "<source>",
      },
    },
    "random_id": {
      "Function_FunctionBucket_Id_216676D0": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`basic function with memory size specified 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5",
                    "path": "root/Default/Function/CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5",
                  },
                  "DefaultFunction": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "DefaultFunction",
                    "path": "root/Default/Function/DefaultFunction",
                  },
                  "FunctionBucket": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/Function/FunctionBucket/Default",
                      },
                      "IamServiceAccountCredentialsApi": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamServiceAccountCredentialsApi",
                        "path": "root/Default/Function/FunctionBucket/IamServiceAccountCredentialsApi",
                      },
                      "Id": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Id",
                        "path": "root/Default/Function/FunctionBucket/Id",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/Function/FunctionBucket",
                  },
                  "FunctionObjectBucket": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "FunctionObjectBucket",
                    "path": "root/Default/Function/FunctionObjectBucket",
                  },
                  "ProjectIamMember": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "ProjectIamMember",
                    "path": "root/Default/Function/ProjectIamMember",
                  },
                  "ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5",
                    "path": "root/Default/Function/ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with timeout beyond the allowed range 1`] = `"Timeout must be between 1 and 540 seconds for GCP Cloud Functions"`;

exports[`basic function with timeout explicitly set 1`] = `
{
  "resource": {
    "google_cloudfunctions_function": {
      "Function_DefaultFunction_81B206D7": {
        "available_memory_mb": 1024,
        "description": "This function was created by Wing",
        "entry_point": "handler",
        "environment_variables": {},
        "name": "function-c852aba6",
        "project": "my-project",
        "region": "us-central1",
        "runtime": "nodejs20",
        "service_account_email": "\${google_service_account.Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375.email}",
        "source_archive_bucket": "\${google_storage_bucket.Function_FunctionBucket_CD7D2793.name}",
        "source_archive_object": "\${google_storage_bucket_object.Function_FunctionObjectBucket_A7CD2097.name}",
        "timeout": 30,
        "trigger_http": true,
      },
    },
    "google_project_iam_custom_role": {
      "Function_CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5_22DA7C69": {
        "permissions": [
          "cloudfunctions.functions.get",
        ],
        "role_id": "cloudfunctions.customc852aba6d7cbe50c86bbedd1463b05db52425574b5",
        "title": "Custom Role for Cloud Function c852aba6d7cbe50c86bbedd1463b05db52425574b5",
      },
    },
    "google_project_iam_member": {
      "Function_ProjectIamMember_F891F2CD": {
        "member": "serviceAccount:\${google_service_account.Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375.email}",
        "project": "my-project",
        "role": "projects/my-project/roles/\${google_project_iam_custom_role.Function_CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5_22DA7C69.role_id}",
      },
    },
    "google_project_service": {
      "Function_FunctionBucket_IamServiceAccountCredentialsApi_EC496DEC": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_service_account": {
      "Function_ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5_504E4375": {
        "account_id": "function-c852aba6",
        "display_name": "Custom Service Account for Cloud Function c852aba6d7cbe50c86bbedd1463b05db52425574b5",
      },
    },
    "google_storage_bucket": {
      "Function_FunctionBucket_CD7D2793": {
        "depends_on": [
          "google_project_service.Function_FunctionBucket_IamServiceAccountCredentialsApi_EC496DEC",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "functionbucket-\${random_id.Function_FunctionBucket_Id_216676D0.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
    },
    "google_storage_bucket_object": {
      "Function_FunctionObjectBucket_A7CD2097": {
        "bucket": "\${google_storage_bucket.Function_FunctionBucket_CD7D2793.name}",
        "name": "objects",
        "source": "<source>",
      },
    },
    "random_id": {
      "Function_FunctionBucket_Id_216676D0": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`basic function with timeout explicitly set 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5",
                    "path": "root/Default/Function/CustomRolec852aba6d7cbe50c86bbedd1463b05db52425574b5",
                  },
                  "DefaultFunction": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "DefaultFunction",
                    "path": "root/Default/Function/DefaultFunction",
                  },
                  "FunctionBucket": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/Function/FunctionBucket/Default",
                      },
                      "IamServiceAccountCredentialsApi": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamServiceAccountCredentialsApi",
                        "path": "root/Default/Function/FunctionBucket/IamServiceAccountCredentialsApi",
                      },
                      "Id": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Id",
                        "path": "root/Default/Function/FunctionBucket/Id",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/Function/FunctionBucket",
                  },
                  "FunctionObjectBucket": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "FunctionObjectBucket",
                    "path": "root/Default/Function/FunctionObjectBucket",
                  },
                  "ProjectIamMember": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "ProjectIamMember",
                    "path": "root/Default/Function/ProjectIamMember",
                  },
                  "ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5",
                    "path": "root/Default/Function/ServiceAccountc852aba6d7cbe50c86bbedd1463b05db52425574b5",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
